agregando ejercicio de bloques GitHub

--- a/Ejercicios-HTML/Ejemplo-HTLM-CSS/Bloques-GitHub/Bloques-GitHub.html
+++ b/Ejercicios-HTML/Ejemplo-HTLM-CSS/Bloques-GitHub/Bloques-GitHub.html
@@ -9,26 +9,18 @@
     <section class="container">
         <header class="top-nav">GitHub Blocks</header>
         <section class="main">
-            <article class="sub-content">Imagen1</article>
-                <img src="Imagenes/linktocat.jpg" alt="linktocat">
-            <article class="sub-content">Imagen2</article>
-                <img src="Imagenes/megacat.jpg" alt="megacat">
-            <article class="sub-content">Imagen3</article>
-                <img src="Imagenes/momtocat.png" alt="momtocat">
-        </section>
-        <section class="row">
-            <article class="sub-content">Imagen4</article>
-                <img src="Imagenes/monroe.jpg" alt="monroe">
-            <article class="sub-content">Imagen5</article>
-                <img src="Imagenes/nyantocat.gif" alt="nyantocat">
+            <article><img src="Imagenes/linktocat.jpg" alt="linktocat" class="imagen">
+                    <img src="Imagenes/megacat.jpg" alt="megacat" class="imagen">
+                    <img src="Imagenes/momtocat.png" alt="momtocat" class="imagen"></article>
         </section>
         <section class="main">
-            <article class="sub-content">Imagen6</article>
-                <img src="Imagenes/octocat-de-los-muertos.jpg" alt="octocat-de-los-muertos">
-            <article class="sub-content">Imagen7</article>
-                <img src="Imagenes/scarletteocat.jpg" alt="scarletteocat">
-            <article class="sub-content">Imagen8</article>
-                <img src="Imagenes/waldocat.png" alt="waldocat">
+                    <article><img src="Imagenes/monroe.jpg" alt="monroe"class="imagen">
+                    <img src="Imagenes/mona-lovelace.jpg" alt="mona-lovelace"class="imagen"></article>
+        </section>
+        <section class="main">
+            <article><img src="Imagenes/octocat-de-los-muertos.jpg" alt="octocat-de-los-muertos"class="imagen">
+                    <img src="Imagenes/twenty-percent-cooler-octocat.png" alt="twenty"class="imagen">
+                    <img src="Imagenes/waldocat.png" alt="waldocat" class="imagen"></article>
         </section>
 </body>
 </html>
